--- a/carrinho.html
+++ b/carrinho.html
@@ -1,15 +1,85 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/estilo.css">
-    <title>EcoShop :: Carrinho de Compras</title>
-  </head>
-  <body>
-    <div class="d-flex flex-column wrapper">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="/css/estilo.css">
+  <title>EcoShop :: Carrinho de Compras</title>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+  <script src="./scripts/firebase_config.js"></script>
+  <script src="./scripts/carrinho.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyA8e9J8fVDDJEPhiqSshQ6ZRE7JEGXXQl0",
+      authDomain: "ecolshop-972a6.firebaseapp.com",
+      projectId: "ecolshop-972a6",
+      storageBucket: "ecolshop-972a6.appspot.com",
+      messagingSenderId: "76103641047",
+      appId: "1:76103641047:web:9746580fa86e40912a8d92"
+    };
+    firebase.initializeApp(firebaseConfig);
+
+    db = firebase.firestore()
+
+
+
+    //get_carrinho = db.collection('carrinho').where(firebase.firestore.FieldPath.documentId(), '==', '83DrDNwoY28sgfpXKLuv').get().teste
+
+    const productRef = collection(db, "carrinho");
+    const q = query(productRef, where("teste", "==", "B4sSWm2XBlm8foBPtYe0"));
+
+    // le a coleção 'produtos' somente o documento com o id especificado.
+    // precisamos ler o carrinho onde tem IDs de documentos (produtos), usar esses IDs pra colocar nessa leitura.
+    // vai ser um array, então vai ter que fazer um loop pra adicionar vários (essa ideia pode ser ruim...).
+
+    get_produtos = db.collection('produtos').where(firebase.firestore.FieldPath.documentId(), '==', "7BB7dmuMjtEcHdXRqcWT").get()
+
+
+    get_produtos.then(produtos => {
+      produtos.docs.map(prods_loja => (
+        document.getElementById('carrinho').innerHTML +=
+        `    
+                    <div class="col-4 col-md-3 col-lg-2">
+                        <a href="#">
+                          <img src=${prods_loja.data().imagem} class="img-thumbnail">
+                        </a>
+                    </div>
+                    <div class="col-8 col-md-9 col-lg-7 col-xl-8 text-left align-self-center">
+                        <h4>
+                          <b><a href="#" class="text-decoration-none text-success">${prods_loja.data().nome}</a></b>
+                        </h4>
+                        <h5>
+                          ${prods_loja.data().descricao}
+                        </h5>
+                    </div>
+                    <div class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
+                      <div class="input-group">
+                        <button class="btn btn-outline-dark btn-sm" type="button">
+                          <i class="bi-caret-up" style="font-size: 24px; line-height: 24px;"></i>
+                        </button>
+                      <input type="text" class="form-control text-center border-dark " value="4">
+                        <button class="btn btn-outline-dark btn-sm" type="button">
+                          <i class="bi-caret-up"></i>
+                        </button>
+                        <button class="btn btn-outline-success" type="button">
+                          <i class="bi-trash"></i>
+                        </button>
+                      </div>
+                    </div>
+                </div>
+          `
+      ))
+    }).catch(err => console.log(err))
+  </script>
+</head>
+
+<body>
+  <div class="d-flex flex-column wrapper">
     <nav class="navbar navbar-expand-lg navbar-dark bg-success border-bottom shadow-sm m-md-3">
       <div class="container">
         <a href="#" class="navbar-brand"><b>EcoShop</b></a>
@@ -34,10 +104,13 @@
                 <a href="login.html" class="nav-link text-white">Entrar</a>
               </li>
               <li class="nav-item">
-                <span class="badge rounded-pill bg-light text-success position-absolute ms-3 mt-0 " title="5 produto(s) no carrinho"><small>5</small></span>
+                <span class="badge rounded-pill bg-light text-success position-absolute ms-3 mt-0 "
+                  title="5 produto(s) no carrinho"><small>5</small></span>
                 <a href="carrinho.html" class="nav-link text-white">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" fill="currentColor" class="bi bi-cart"
+                    viewBox="0 0 16 16">
+                    <path
+                      d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
                   </svg>
                 </a>
               </li>
@@ -46,66 +119,44 @@
         </div>
       </div>
     </nav>
-    
-      <main class="flex-fill">
-        <div class="container">
-          <ul class="list-group mb-3">
-            <li class="list-group-item py-3">
-                <div class="row g-3">
-                    <div class="col-4 col-md-3 col-lg-2">
-                        <a href="#">
-                          <img src="img/sabao01.jpg" class="img-thumbnail">
-                        </a>
-                    </div>
-                    <div class="col-8 col-md-9 col-lg-7 col-xl-8 text-left align-self-center">
-                        <h4>
-                          <b><a href="#" class="text-decoration-none text-success">Sabão Natural</a></b>
-                        </h4>
-                        <h5>
-                          Sabão da melhor qualidade e 100% natural.
-                        </h5>
-                    </div>
-                    <div class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
-                      <div class="input-group">
-                        <button class="btn btn-outline-dark btn-sm" type="button">
-                          <i class="bi-caret-up" style="font-size: 24px; line-height: 24px;"></i>
-                        </button>
-                      <input type="text" class="form-control text-center border-dark " value="4">
-                        <button class="btn btn-outline-dark btn-sm" type="button">
-                          <i class="bi-caret-up"></i>
-                        </button>
-                        <button class="btn btn-outline-success" type="button">
-                          <i class="bi-trash"></i>
-                        </button>
-                      </div>
-                    </div>
-                </div>
-            </li>
-          </ul>
-        </div>
-      </main>
 
-      <footer class="border-top text-muted bg-light">
-        <div class="container">
-          <div class="row py-3">
-            <div class="col-12 col-md-4 text-center">
-              &copy; 2022 - EcoShop <br> Rua Virtual Inexistente <br> CPNJ  99.999,999/0001-99
+
+    <main class="flex-fill">
+      <div class="container">
+        <ul class="list-group mb-3">
+          <li class="list-group-item py-3">
+
+            <div class="row g-3" id="carrinho">
+
             </div>
-            <div class="col-12 col-md-4 text-center">
-              <a href="privacidade.html" class="text-decoration-none text-dark">Política de Privacidade</a><br>
-              <a href="termos.html" class="text-decoration-none text-dark">Termos de Uso</a><br>
-              <a href="quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a><br>
-              <a href="trocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
-            </div>
-            <div class="col-12 col-md-4 text-center">
-              <a href="contato.html" class="text-decoration-none text-dark">Contato pelo Site</a><br>
-              E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a><br>
-              Telefone: <a href="phone:129999766" class="text-decoration-none text-dark">(86) 9999-0000</a>
-            </div>
+
+          </li>
+        </ul>
+      </div>
+    </main>
+
+    <footer class="border-top text-muted bg-light">
+      <div class="container">
+        <div class="row py-3">
+          <div class="col-12 col-md-4 text-center">
+            &copy; 2022 - EcoShop <br> Rua Virtual Inexistente <br> CPNJ 99.999,999/0001-99
+          </div>
+          <div class="col-12 col-md-4 text-center">
+            <a href="privacidade.html" class="text-decoration-none text-dark">Política de Privacidade</a><br>
+            <a href="termos.html" class="text-decoration-none text-dark">Termos de Uso</a><br>
+            <a href="quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a><br>
+            <a href="trocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
+          </div>
+          <div class="col-12 col-md-4 text-center">
+            <a href="contato.html" class="text-decoration-none text-dark">Contato pelo Site</a><br>
+            E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a><br>
+            Telefone: <a href="phone:129999766" class="text-decoration-none text-dark">(86) 9999-0000</a>
           </div>
         </div>
-      </footer>
-    </div>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  </body>
+      </div>
+    </footer>
+  </div>
+  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+</body>
+
 </html>
