--- a/carrinho.html
+++ b/carrinho.html
@@ -27,61 +27,74 @@
     db = firebase.firestore()
 
 
+    function pegar_carrinho(){
+      get_carrinho = db.collection('carrinho').where(firebase.firestore.FieldPath.document(), '==', 
+       "83DrDNwoY28sgfpXKLuv").get()
 
-    //get_carrinho = db.collection('carrinho').where(firebase.firestore.FieldPath.documentId(), '==', '83DrDNwoY28sgfpXKLuv').get().teste
+       get_carrinho.then(snapshot => {
+         snapshot.docs.map(item => {
+           carrinho = item.data().lista_carrinho;
+         })
+       }).catch(err => console.log(err))
+    }
 
-    const productRef = collection(db, "carrinho");
-    const q = query(productRef, where("teste", "==", "B4sSWm2XBlm8foBPtYe0"));
+      get_produtos = db.collection('produtos').where(firebase.firestore.FieldPath.documentId(), '==',  
+   "cmB6LkkoJY9kaJBfAnr1" ).get()
 
-    // le a coleção 'produtos' somente o documento com o id especificado.
-    // precisamos ler o carrinho onde tem IDs de documentos (produtos), usar esses IDs pra colocar nessa leitura.
-    // vai ser um array, então vai ter que fazer um loop pra adicionar vários (essa ideia pode ser ruim...).
-
-    get_produtos = db.collection('produtos').where(firebase.firestore.FieldPath.documentId(), '==', "7BB7dmuMjtEcHdXRqcWT").get()
-
-
-    get_produtos.then(produtos => {
-      produtos.docs.map(prods_loja => (
+      get_produtos.then(produtos => {
+      produtos.docs.map(item => (
         document.getElementById('carrinho').innerHTML +=
-        `    
-                    <div class="col-4 col-md-3 col-lg-2">
-                        <a href="#">
-                          <img src=${prods_loja.data().imagem} class="img-thumbnail">
-                        </a>
-                    </div>
-                    <div class="col-8 col-md-9 col-lg-7 col-xl-8 text-left align-self-center">
-                        <h4>
-                          <b><a href="#" class="text-decoration-none text-success">${prods_loja.data().nome}</a></b>
-                        </h4>
-                        <h5>
-                          ${prods_loja.data().descricao}
-                        </h5>
-                    </div>
-                   <div class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
+        ` <ul class="list-group mb-3">
+                    <li class="list-group-item py-3">
+                        <div class="row g-3">
+          <div class="col-4 col-md-3 col-lg-2">
+                <a href="#">
+                <img src=${item.data().imagem} class="img-thumbnail">
+                </a>
+           </div>
+            <div class="col-8 col-md-9 col-lg-7 col-xl-8 text-left align-self-center">
+                <h4>
+                   <b><a href="#" class="text-decoration-none text-success">${item.data().nome}</a></b>
+                </h4>
+                <h5>
+                    ${item.data().descricao}
+                </h5>
+              </div>
+              <div class="row g-3" id="carrinho">
+                <div
+                    class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
                       <div class="input-group">
                         <button class="btn btn-outline-dark btn-sm" type="button">
                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down" viewBox="0 0 16 16">
                             <path d="M3.204 5h9.592L8 10.481 3.204 5zm-.753.659 4.796 5.48a1 1 0 0 0 1.506 0l4.796-5.48c.566-.647.106-1.659-.753-1.659H3.204a1 1 0 0 0-.753 1.659z"/>
                           </svg>
                         </button>
-                      <input type="text" class="form-control text-center border-dark " value="4">
+                        <input type="text" class="form-control text-center border-dark" value="">
                         <button class="btn btn-outline-dark btn-sm" type="button">
                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up" viewBox="0 0 16 16">
                             <path d="M3.204 11h9.592L8 5.519 3.204 11zm-.753-.659 4.796-5.48a1 1 0 0 1 1.506 0l4.796 5.48c.566.647.106 1.659-.753 1.659H3.204a1 1 0 0 1-.753-1.659z"/>
                           </svg>
                         </button>
-                        <button class="btn btn-outline-success" type="button">
+                        <button class="btn btn-outline-danger border-dark btn-sm" type="button">
                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V 4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11 1h-11z"/>
                           </svg>
                         </button>
-                      </div>
+                        <li class="list-group-item py-3">
+                        <div class="text-end">
+                            <h4 class="text-dark mb-3">
+                             Valor total R$ ${item.data().valor}
+                            </h4>
                     </div>
+                  </li>
+                </ul>
                 </div>
-          `
+        `
       ))
-    }).catch(err => console.log(err))
+      })
+      
+              
   </script>
 </head>
 
